--- a/public/admin/assets/i18n/en.json
+++ b/public/admin/assets/i18n/en.json
@@ -92,6 +92,7 @@
       "website": {
         "MAIN": "Website",
         "ANALYTICS": "Site Analytics",
+        "TRAFFIC": "Site Traffic",
         "PAGES": "Pages",
         "POSTS": "Blog Posts",
         "TEMPLATES": "Templates",
@@ -106,6 +107,7 @@
           "MAIN": "Platform",
           "MANAGE": "Customers",
           "ANALYTICS": "Platform Analytics",
+          "TRAFFIC": "Platform Traffic",
           "BROADCAST": "Broadcast Message",
           "JOBS": "Scheduled Jobs"
       },
